# rordle

./: Cargo.toml  LICENSE  README.md  example_word_list.txt
src/: main.rs
