[package]
name = "rordle"
version = "0.2.0"
author = ["Niko Abeler <niko@rerere.org>"]
license = "MIT"
description = "A Wordle clone for the terminal"
readme = "README.md"
homepage = "https://github.com/H4kor/rordle"
repository = "https://github.com/H4kor/rordle"
keywords = ["cli", "game", "wordle"]
categories = ["games"]

edition = "2021"

[dependencies]
termion = "1.5.6"
rand = "0.8.4"
clap = "3.0.7"